Tue Dec 14 16:34:39 1999  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c, gw/wtp.c: Fixed calls to mytex_try_lock (which
	returns -1, not EBUSY, when the lock failed).

Mon Dec 13 20:47:28 1999  Lars Wirzenius  <liw@wapit.com>

	* gw/bb_msg.c, gw/bb_msg.h, gw/bearerbox.c, gw/smsbox.c,
	gw/smsc.c, gw/smsc_p.h, gw/wapbox.c, gw/wsp.c, gw/wsp.h,
	gw/wsp_machine-decl.h, gw/wtp.c, gw/wtp.h, gw/wtp_machine-decl.h,
	gwlib/thread.c, gwlib/thread.h: Replaced pthread_mutex_t with
	Mutex (defined in gwlib/thread.h), so that the evil kludge to work
	around pthread_mutex_trylock can be hidden inside gwlib/thread.c.
	This required touching lightly lots of code, but it should
	work now. Sorry if I broke anything.

Mon Dec 13 19:31:56 1999  Lars Wirzenius  <liw@wapit.com>

	* gw/wapbox.c, gw/wapbox.h (new file): Wrote functions for
	keeping a queue of messages to be sent to the bearer box.
	
	* gw/wtp_send.c: Made use of the message enqueueing function.

Mon Dec 13 18:43:54 1999  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c: WSPMachine now remembers its own address and port as
	well as the client's; also added session_id field.
	
	* gw/wsp.c: Wrote code for creating WSP PDU's. Now creates a
	trivial ConnectionReply PDU.
	
	* gw/wsp_events-decl.h, gw/wsp_state-decl.h: Added field `machine'
	to SConnectResponse event to store the machine to which the
	SConnectResponse handler should send WTP requests. This is
	a kludge but it was (temporarily) easier to do than fixing
	wtp_find_or_create_machine.
	
	* gw/wsp_state-decl.h: Implemented most of SConnectResponse.
	
	* gw/wtp.c, gw/wtp.h: : Wrote function wtp_machine_create, which
	gets all relevant information via the argument list. This is
	mostly just reorganizing and renaming the internal name_machine
	function.  This involved changing wtp_machine_find_or_create
	as well.
	
	* gw/wtp.c: Removed locking of WTPMachine list, since it was
	incorrect and needs to be re-done in a different way. The current